2009-09-17  Juri Linkov  <juri@jurta.org>

	* menu-bar.el (menu-bar-search-menu, menu-bar-edit-menu)
	(menu-bar-options-menu, menu-bar-showhide-fringe-menu)
	(menu-bar-showhide-menu, menu-bar-tools-menu)
	(menu-bar-describe-menu, menu-bar-help-menu)
	(minibuffer-local-completion-map, minibuffer-local-map):
	Fix list quoting.

2009-09-17  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-form): Always check the function
	arguments, whether or not it has a handler.

	* ansi-color.el (ansi-color-get-face-1): Fix typo in handler.

	* simple.el (hard-newline): Give it a doc-string.

	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-syntax-table):
	(lisp-mode-syntax-table): Give them doc-strings.

2009-09-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* menu-bar.el (menu-bar-file-menu, menu-bar-file-menu)
	(menu-bar-i-search-menu, menu-bar-edit-menu, menu-bar-custom-menu)
	(menu-bar-options-menu, menu-bar-showhide-menu)
	(menu-bar-showhide-fringe-ind-menu, menu-bar-showhide-fringe-menu)
	(menu-bar-showhide-scroll-bar-menu, menu-bar-showhide-menu)
	(menu-bar-options-menu, menu-bar-line-wrapping-menu)
	(menu-bar-options-menu, menu-bar-tools-menu)
	(menu-bar-describe-menu, menu-bar-search-documentation-menu)
	(menu-bar-help-menu):
	(menu-bar-make-mm-toggle, menu-bar-make-toggle): Purecopy the
	string arguments.

	* ediff-hook.el (menu-bar-ediff-menu, menu-bar-ediff-merge-menu)
	(menu-bar-epatch-menu, menu-bar-ediff-misc-menu): Add purecopy
	calls for the menu names and :help.

2009-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mouse.el (minor-mode-menu-from-indicator): Pay attention
	to :minor-mode-function (bug#4455).

2009-09-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* startup.el (command-line): Initialize the window-system after
	processing the command-line.

	* textmodes/page.el (what-page): Make sure we don't inf-loop if
	page-delimiter matches the empty string.

2009-09-16  Glenn Morris  <rgm@gnu.org>
